--- a/mathjax/public/less/mathjax.less
+++ b/mathjax/public/less/mathjax.less
@@ -1,1 +1,19 @@
 @import 'bootstrap/bootstrap';
+
+@baseFontSize: 16px;
+@baseLineHeight: 24px;
+
+@textColor: black;
+
+.about {
+  margin-bottom: 1em;
+  padding: 9px 14px;
+  font-size: @baseFontSize + 2px;
+  font-weight: bold;
+  color: @orange;
+  font-style: italic;
+}
+
+.formula {
+  padding-top: 0px;
+}
